--- a/urlshortener/amplify/backend/function/urlshortener/src/views/exercisetracker.html
+++ b/urlshortener/amplify/backend/function/urlshortener/src/views/exercisetracker.html
@@ -71,7 +71,7 @@
 <body>
     <div class="container">
         <h1>Exercise tracker</h1>
-        <form action="/api/users" method="post">
+        <form action="exercisetracker/api/users" method="post">
             <h3>Create a New User</h3>
             <p><code>POST /api/users</code></p>
             <input id="uname" type="text" name="username" placeholder="username" />
@@ -98,7 +98,7 @@
 
         exerciseForm.addEventListener("submit", () => {
             const userId = document.getElementById("uid").value;
-            exerciseForm.action = `/api/users/${userId}/exercises`;
+            exerciseForm.action = `exercisetracker/api/users/${userId}/exercises`;
 
             exerciseForm.submit();
         });
